<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_debug_log"
        android:icon="@drawable/ic_log"
        android:title="@string/nav_debug_log" />
    <item
        android:id="@+id/nav_keywords"
        android:icon="@drawable/ic_keywords"
        android:title="@string/nav_keywords" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
